--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <body>
         <script type="text/javascript" src="main.js"></script>
         <section id="title">Idle Empire is a idle clicker Game developed by <a href="https://www.twitter.com/spacedestructor" target="_blank">Spacedestructor</a></section>
-        <section id="build">Current Build: </section>
-        <section id="updates">Updates are aviable on: <a href="https://mega.nz/#F!StxWBKLI!gl8h8d8vzIEyu1qHU1zrXQ" target="_blank">Mega.nz</a></section>
+        <section id="build">Current Build: Experimental</section>
         <section>Sessions: <span id="sessions">0</span></section>
         <section>Save check:<span id="savefunction"></span></section>
         <section>
