--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UFT-8">
-        <link rel="stylesheet" type="text/css" href="style/interface.css" />
-    </head>
-    <body>
-        <script type="text/javascript" src="scripts/stitch.js"></script>
-        <script type="text/javascript" src="scripts/buildings.js"></script>
-        <script type="text/javascript" src="scripts/main.js"></script>
-        <script tytpe="text/javascript" src="scripts/population.js"></script>
-        <script type="text/javascript" src="scripts/ressources.js"></script>
-        <script type="text/javascript" src="scripts/saves.js"></script>
-        <script type="text/javascript" src="scripts/training.js.js"></script>
-        <section id="title1">Fantasy Empire is a idle clicker Game</section>
-        <section id="title2">developed by <a id='DevTwitter' href="https://www.patreon.com/spacedestructor" target="_blank">Spacedestructor</a></section>
-        <section id="build">Current Build: <span>"Experimantal 2"</span></section>
-        <section>Sessions: <span id="sessions">0</span></section>
-        <section id="Buttons">
+
+<head>
+    <meta charset="UFT-8">
+    <link rel="stylesheet" type="text/css" href="style/interface.css" />
+</head>
+
+<body>
+    <script type="text/javascript" src="scripts/buildings.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
+    <script tytpe="text/javascript" src="scripts/population.js"></script>
+    <script type="text/javascript" src="scripts/ressources.js"></script>
+    <script type="text/javascript" src="scripts/saves.js"></script>
+    <script type="text/javascript" src="scripts/training.js"></script>
+    <script type="text/javascript" src="scripts/dev.js"></script>
+    <section id="title1" onload="launch()">Fantasy Empire is a idle clicker Game</section>
+    <section id="title2">developed by <a id='DevPatreon' href="https://www.patreon.com/spacedestructor"
+            target="_blank">Spacedestructor</a></section>
+    <section id="build">Current Build: <span>"Experimantal 2"</span></section>
+    <section id="sessions-block">Sessions: <span id="sessions">0</span></section>
+    <section class="Buttons">
         <table>
             <tr>
                 <td>
@@ -138,24 +141,26 @@
                 </td>
             </tr>
         </table>
-        
-            <div id="CenterWindow">
-                <span>Main Screen</span>
-                <section>Grain: <span id="Grain">0</span></section>
-                <section>Wood: <span id="Wood">0</span></section>
-                <section>Stone: <span id="Stone">0</span></section>
-                <section>Iron: <span id="Iron">0</span></section>
-                <section>Gold: <span id="Gold">0</span></section>
-                <section>Coal: <span id='Coal'>0</span></section>
-                <section>Synthe Level <span id="Synthe">1</span></section>
-                <section>Axe Level <span id="Axe">1</span></section>
-                <section>Pickaxe Level <span id="Pickaxe">0</span></section>
-                <section>Houses: <span id="House">0</span><span></span></section>
-                <section>Farmer: <span id="Farmer">0</span> / <span id="MaxFarmer">0</span></section>
-                <section>Woodcutter: <span id="Woodcutter">0</span> / <span id="MaxWoodcutter">0</span></section>
-                <section>Miner: <span id="Miner">0</span> / <span id="MaxMiner">0</span></section>
-                <section>Blacksmith: <span id="Blacksmith">0</span> / <span id= "MaxBlacksmith">0</span></section>
-                <section>Wiseman: <span id="Wiseman">0</span> / <span id="MaxWiseman">0</span></section>
-            </div>
-    </body>
+    </section>
+    <div class="CenterWindow">
+        <span>Main Screen</span>
+        <section>Grain: <span id="Grain">0</span></section>
+        <section>Wood: <span id="Wood">0</span></section>
+        <section>Stone: <span id="Stone">0</span></section>
+        <section>Iron: <span id="Iron">0</span></section>
+        <section>Gold: <span id="Gold">0</span></section>
+        <section>Coal: <span id='Coal'>0</span></section>
+        <section>Synthe Level <span id="Synthe">1</span></section>
+        <section>Axe Level <span id="Axe">1</span></section>
+        <section>Pickaxe Level <span id="Pickaxe">0</span></section>
+        <section>Houses: <span id="House">0</span><span></span></section>
+        <section>Farmer: <span id="Farmer">0</span> / <span id="MaxFarmer">0</span></section>
+        <section>Woodcutter: <span id="Woodcutter">0</span> / <span id="MaxWoodcutter">0</span></section>
+        <section>Miner: <span id="Miner">0</span> / <span id="MaxMiner">0</span></section>
+        <section>Blacksmith: <span id="Blacksmith">0</span> / <span id="MaxBlacksmith">0</span></section>
+        <section>Wiseman: <span id="Wiseman">0</span> / <span id="MaxWiseman">0</span></section>
+    </div>
+    <div id="console"></div>
+</body>
+
 </html>
